...
                        .animation(.easeIn(duration: 0.4).delay(0.5), value: hasAppeared)
                }
            }
        } footer: {
            VStack(spacing: 24) {
                Button(action: continueAction) {
                    Text("Continue")
                        .font(.headline).fontWeight(.semibold)
                        .frame(maxWidth: .infinity)
                }
                .primaryActionStyle()

                Button("I'm Not Ready", action: cancelAction)
...
