...
            )
        }
    }
    
    private var footerButtons: some View {
        VStack(spacing: 24) {
            Button("Let's Go", action: continueAction)
                .buttonStyle(PrimaryButtonStyle())
                .disabled(requestAuth && !arePermissionsGranted)
            .opacity(requestAuth && !arePermissionsGranted ? 0.5 : 1.0)
            .animation(.easeInOut, value: arePermissionsGranted)
            
            Button("I'm not Ready", action: cancelAction)
...
