...
        )
    }

    var body: some View {
        VStack(spacing: 0) {
            HStack {
                Text("Preferences")
                    .font(.title)
                    .fontWeight(.bold)
                
                Spacer()
                
                if #available(iOS 26.0, *) {
...
                    } label: {
                        Image(systemName: "checkmark")
                            .font(.title2)
                            .frame(maxWidth: 20, maxHeight: 30)
                    }
                    .buttonStyle(.glassProminent)
                    .accessibilityLabel("Done")
                } else {
                    Button {
                        dismiss()
                    } label: {
                        Text("Done")
                            .foregroundStyle(Color.accent)
...
        .onDisappear { syncTask?.cancel() }
        .alert(alertManager.title, isPresented: $alertManager.isPresenting) {
            if alertManager.showSettingsButton {
                 Button("Open Settings") { UIApplication.openAppSettings() }
                 Button("Cancel", role: .cancel) { }
             } else {
                 Button("OK", role: .cancel) { }
             }
        } message: {
            Text(alertManager.message)
        }
    }
    
...
